<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@color/cayanSelection">

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_margin="24dp"
        android:src="@drawable/x_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/more_suggestions"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        android:padding="8dp"
        app:cardCornerRadius="8dp"
        android:alpha="0.5"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/envelope_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/suggest_improvements" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/share_app_link"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        android:padding="8dp"
        android:alpha="0.5"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/more_suggestions">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_baseline_share_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/share_this_app" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/like_us"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        android:alpha="0.5"
        android:padding="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/share_app_link">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginEnd="16dp"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_rate_us" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/like_us_share_us" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/remove_ads"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        android:padding="8dp"
        android:alpha="0.5"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/like_us">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/no_ads_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/remove_ads" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/purchase_recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="8dp"
        android:textSize="14sp"
        android:text="@string/purchase_recovery"
        app:layout_constraintTop_toBottomOf="@+id/remove_ads"
        app:layout_constraintStart_toStartOf="@+id/remove_ads"
        android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>