<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/complete_shift_dialog__background"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/edit_shift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:padding="8dp"/>

       <LinearLayout
           android:id="@+id/shift_summary"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           app:layout_constraintBottom_toTopOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layoutDirection="rtl"
           app:layout_constraintStart_toStartOf="parent">

           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginTop="8dp"
               android:layout_marginBottom="16dp"
               android:layout_marginStart="16dp"
               android:layout_marginEnd="16dp"
               android:layoutDirection="rtl"
               app:cardBackgroundColor="#4dffffff"
               app:cardCornerRadius="8dp">

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="16dp"
                   android:orientation="vertical">

                   <TextView
                       android:id="@+id/entry_description"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="16dp"
                       android:background="@color/transparent"
                       android:text="@string/entry"
                       android:textColor="@color/black"
                       android:textSize="20sp"
                       android:textStyle="normal"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent" />

                   <TextView
                       android:id="@+id/entry_value"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:background="@color/transparent"
                       android:textColor="@color/black"
                       android:textSize="20sp"
                       android:textStyle="normal"
                       app:layout_constraintBottom_toBottomOf="@id/entry_description"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintTop_toTopOf="@id/entry_description" />


                   <TextView
                       android:id="@+id/exit_description"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="16dp"
                       android:background="@color/transparent"
                       android:text="@string/exit"
                       android:textColor="@color/black"
                       android:textSize="20sp"
                       android:textStyle="normal"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/entry_description" />

                   <TextView
                       android:id="@+id/exit_value"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:background="@color/transparent"
                       android:textColor="@color/black"
                       android:textSize="20sp"
                       android:textStyle="normal"
                       app:layout_constraintBottom_toBottomOf="@id/exit_description"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/entry_value"
                       app:layout_constraintTop_toTopOf="@id/exit_description" />

                   <TextView
                       android:id="@+id/rate_description"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="16dp"
                       android:text="@string/rate"
                       android:textColor="@color/black"
                       android:textSize="20sp"
                       android:textStyle="normal"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/exit_description" />

                   <TextView
                       android:id="@+id/rate_value"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="@color/black"
                       android:textSize="20sp"
                       android:textStyle="normal"
                       app:layout_constraintBottom_toBottomOf="@id/rate_description"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/exit_value"
                       app:layout_constraintTop_toTopOf="@id/rate_description" />

                   <TextView
                       android:id="@+id/total_time_description"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="16dp"
                       android:text="@string/total_time_desc_text"
                       android:textColor="@color/black"
                       android:textSize="20sp"
                       android:textStyle="bold"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/rate_description" />

                   <TextView
                       android:id="@+id/total_time_value"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="@color/black"
                       android:textSize="20sp"
                       android:textStyle="bold"
                       app:layout_constraintBottom_toBottomOf="@id/total_time_description"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/exit_value"
                       app:layout_constraintTop_toTopOf="@id/total_time_description" />

                   <TextView
                       android:id="@+id/total_payment_description"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="16dp"
                       android:text="סכום"
                       android:textColor="@color/black"
                       android:textSize="20sp"
                       android:textStyle="bold"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/total_time_description" />

                   <TextView
                       android:id="@+id/total_payment_value"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="@color/black"
                       android:textSize="20sp"
                       android:textStyle="bold"
                       app:layout_constraintBottom_toBottomOf="@id/total_payment_description"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/exit_value"
                       app:layout_constraintTop_toTopOf="@id/total_payment_description" />
          </androidx.constraintlayout.widget.ConstraintLayout>
           </androidx.cardview.widget.CardView>
       </LinearLayout>

        <ImageView
            android:id="@+id/ok_button"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/circle_shape"
            android:padding="24dp"
            android:scaleType="fitXY"
            android:src="@drawable/v_icon"
            app:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>